--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"url": "git@github.com:mesmotronic/conbo-viewstack.git"
 	},
 	"readme": "./README.md",
+	"types": "./dist/ViewNavigator.d.ts",
 	"devDependencies": {
 		"conbo": "^4.3.2"
 	}
